# worktrunk

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .typos.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  TODO.md  Taskfile.yaml  config.example.toml  dist-workspace.toml  flake.nix
.claude-plugin/: CLAUDE.md  README.md  marketplace.json  plugin.json
.claude-plugin/hooks/: hooks.json
.claude/rules/: caching-strategy.md  cli-output-formatting.md  output-system-architecture.md
.config/: lychee.toml  nextest.toml  tend.toml  wt.toml
.github/: CLAUDE.md  dependabot.yaml  nightly-failure.md
.github/scripts/: criterion-to-jsonl.py
.github/workflows/: build-docs.yaml  ci.yaml  ci.yml  claude-ci-fix.yaml  claude-hourly-review-reviewers.yaml  claude-issue-triage.yaml  claude-mention.yaml  claude-nightly-cleaner.yaml  claude-nightly-review-reviewers.yaml  claude-renovate.yaml  claude-review.yaml  claude.yaml  nightly-benchmark.yaml  nightly.yaml  publish-docs.yaml  release.yaml  tend-ci-fix.yaml  tend-mention.yaml  tend-nightly.yaml  tend-notifications.yaml  tend-renovate.yaml  tend-review-runs.yaml  tend-review.yaml  tend-triage.yaml  tend-weekly.yaml  tier-2-integration-tests.yml
benches/: CLAUDE.md  alias.rs  completion.rs  cow_copy.rs  list.rs  picker_preview.rs  remove.rs  time_to_first_output.rs
dev/: config.example.toml  wt-demo-build.sh  wt.example.toml
dev/wt-demo/: demo.tape
docs/: CLAUDE.md  config.toml
docs/content/: advanced.md  claude-code.md  commands.md  config.md  configuration.md  extending.md  faq.md  hook.md  list.md  llm-commits.md  merge.md  quickstart.md  remove.md  select.md  step.md  switch.md  tips-patterns.md  why-worktrunk.md  worktrunk.md
docs/demos/: CLAUDE.md  build
docs/dev/: cache-staleness.md
docs/sass/: custom.scss
docs/static/: claude-code.md  code-copy.js  config.md  extending.md  faq.md  hook.md  list.md  llm-commits.md  llms.txt  merge.md  remove.md  search.js  step.md  switch.md  tips-patterns.md  worktrunk.md
docs/templates/: _variables.html  base.html  sitemap.xml
plugins/gemini/: gemini-extension.json
plugins/worktrunk/: CLAUDE.md
scripts/: wt-demo-build.sh
scripts/wt-demo/: README.md  demo.tape
skills/worktrunk/: SKILL.md
skills/wt-switch-create/: SKILL.md  rationale.md
src/: cli.rs  command_log.rs  completion.rs  config.rs  copy.rs  diagnostic.rs  display.rs  docs.rs  git.rs  help.rs  help_pager.rs  lib.rs  llm.rs  log_files.rs  logging.rs  main.rs  md_help.rs  path.rs  priority.rs  progress.rs  remove_dir.rs  shell.rs  shell_exec.rs  styling.rs  summary.rs  testing.rs  utils.rs  verbose_log.rs
src/cli/: config.rs  hook.rs  list.rs  mod.rs  step.rs
src/commands/: CLAUDE.md  alias.rs  beta.rs  command_approval.rs  command_executor.rs  commit.rs  completion.rs  config.rs  configure_shell.rs  context.rs  custom.rs  dev.rs  eval.rs  external.rs  for_each.rs  handle_merge_jj.rs  handle_switch.rs  hook_announcement.rs  hook_commands.rs  hook_filter.rs  hooks.rs  init.rs  merge.rs  mod.rs  pipeline_spec.rs  process.rs  project_config.rs  relocate.rs  remove.rs  repository_ext.rs  run_pipeline.rs  select.rs  standalone.rs  statusline.rs  step_commands.rs  template_vars.rs  worktree.rs
src/config/: approvals.rs  commands.rs  deprecation.rs  expansion.rs  hooks.rs  loaded.rs  mod.rs  project.rs  test.rs  user.rs
src/config/user/: mod.rs  (+6 more)
src/git/: ci_platform.rs  diff.rs  error.rs  mod.rs  parse.rs  reap.rs  recover.rs  remote_ref.rs  remove.rs  test.rs  url.rs
src/output/: commit_generation.rs  concurrent.rs  directive.rs  global.rs  handlers.rs  interactive.rs  mod.rs  shell_integration.rs
src/shell/: detection.rs  mod.rs  paths.rs  utils.rs
src/snapshots/: worktrunk__shell__tests__init_powershell.snap
src/styling/: constants.rs  format.rs  highlighting.rs  hyperlink.rs  line.rs  mod.rs  suggest.rs
src/testing/: mock_commands.rs  mod.rs
src/trace/: chrome.rs  emit.rs  mod.rs  parse.rs
src/workspace/: jj.rs  mod.rs
templates/: bash.sh  elvish.elv  fish.fish  fish_wrapper.fish  nushell.nu  posix_directives.sh  powershell.ps1  xonsh.xsh  zsh.zsh
tests/: CLAUDE.md  output_system_guard.rs
tests/common/: list_snapshots.rs  mod.rs  progressive_output.rs  pty.rs
tests/helpers/wt-perf/: Cargo.toml
tests/helpers/wt-perf/src/: lib.rs  main.rs
tests/integration_tests/: .post_start_commands.rs.pending-snap  analyze_trace.rs  approval_pty.rs  approval_save.rs  approval_ui.rs  approvals.rs  bare_repository.rs  ci_status.rs  column_alignment_verification.rs  completion.rs  completion_validation.rs  config_cache.rs  config_init.rs  config_list.rs  config_show.rs  config_show_theme.rs  config_state.rs  config_update_pty.rs  configure_shell.rs  default_branch.rs  diagnostic.rs  directives.rs  doc_templates.rs  e2e_shell.rs  e2e_shell_post_start.rs  eval.rs  for_each.rs  git_error_display.rs  help.rs  hook_show.rs  init.rs  internal_flag.rs  jj.rs  list.rs  list_config.rs  list_progressive.rs  merge.rs  mod.rs  output_system_guard.rs  post_start_commands.rs  (+20 more)
tests/snapshots/: git_error_display__push_failed.snap  git_error_display__worktree_removal_failed.snap  integration__integration_tests__approval_pty__approval_prompt_accept.snap  integration__integration_tests__approval_pty__approval_prompt_decline.snap  integration__integration_tests__approval_pty__approval_prompt_mixed_approved_unapproved_accept.snap  integration__integration_tests__approval_pty__approval_prompt_mixed_approved_unapproved_decline.snap  integration__integration_tests__approval_pty__approval_prompt_multiple_commands.snap  integration__integration_tests__approval_pty__approval_prompt_named_commands.snap  integration__integration_tests__approval_pty__approval_prompt_permission_error.snap  integration__integration_tests__approval_pty__approval_prompt_remove_decline.snap  integration__integration_tests__approval_ui__already_approved_skip_prompt.snap  integration__integration_tests__approval_ui__approval_fails_in_non_tty.snap  integration__integration_tests__approval_ui__approval_mixed_approved_unapproved.snap  (+1222 more)
(+275 files in other folders)
