[workspace]
members = ["tests/helpers/wt-perf", "tests/helpers/mock-stub"]
# Include mock-stub and wt-perf so `cargo test` builds their binaries
default-members = [".", "tests/helpers/mock-stub", "tests/helpers/wt-perf"]

# cargo-affected input→test rules. cargo-affected selects tests by Rust-line
# coverage overlap, so a file a test reads at *runtime* (never recorded in
# coverage) maps to no test and would slip through `cargo affected run`. Each
# rule force-selects the owning tests when a matching path changes. `[*.metadata]`
# is excluded from cargo-affected's fingerprint, so editing a rule is
# cache-neutral. See https://github.com/max-sixty/cargo-affected#input-rules.

# insta `.snap` snapshots are read at test time and never appear in coverage, so
# a snapshot edit maps to no test. Route each snapshot to the binary that owns
# it — the finest granularity available without a snapshot→test map. Integration
# snapshots live under tests/; unit-test snapshots under src/, split across the
# lib (`worktrunk`) and the `wt` binary (`worktrunk::bin/wt`).
[[workspace.metadata.affected.rule]]
globs = ["tests/**/*.snap"]
filterset = "binary_id(=worktrunk::integration)"

[[workspace.metadata.affected.rule]]
globs = ["src/**/*.snap"]
filterset = "binary_id(=worktrunk) | binary_id(=worktrunk::bin/wt)"

# tests/integration_tests/readme_sync.rs reads each of these at runtime (via
# fs::read_to_string) and asserts the committed copies stay in sync — both the
# sources (README.md, docs/content markdown, docs/config.toml's site title and
# description, src/cli/mod.rs, src/llm.rs, the skill references, Taskfile.yaml)
# and the generated artifacts it regenerates and compares against (the
# dev/*.example.toml files, docs/static/llms.txt, the agent-skills index.json).
# Editing any of them flips the test, but coverage can't link a runtime-read
# file to it.
[[workspace.metadata.affected.rule]]
globs = [
    "README.md",
    "docs/**/*.md",
    "docs/config.toml",
    "docs/static/llms.txt",
    "docs/static/.well-known/agent-skills/index.json",
    "dev/*.toml",
    "src/cli/mod.rs",
    "src/llm.rs",
    "Taskfile.yaml",
    "skills/**/*.md",
]
filterset = "test(/readme_sync/)"

[package]
name = "worktrunk"
version = "0.58.0"
edition = "2024"
rust-version = "1.95"
build = "build.rs"
repository = "https://github.com/max-sixty/worktrunk"
homepage = "https://worktrunk.dev"
description = "A CLI for Git worktree management, designed for parallel AI agent workflows"
license = "MIT OR Apache-2.0"
default-run = "wt"

[package.metadata.release]
# Allow releases from any branch (GitHub Actions uses detached HEAD)
allow-branch = ["*"]
consolidate-commits = true

[package.metadata.cargo-udeps.ignore]
# Used only on Windows (#[cfg(windows)] in src/shell_exec.rs)
normal = ["which"]

[features]
# Disabled: Enable testing for shells that require extra installation steps (nushell, powershell, elvish, xonsh, oil)
# tier-2-integration-tests = []
# Enable syntax highlighting for bash commands in output (requires tree-sitter)
# This is optional to avoid C compilation issues on some platforms
default = ["cli", "syntax-highlighting"]
# Enables the `wt` binary and everything specific to the CLI: argument parsing,
# interactive picker, rich terminal rendering, and the markdown help pager.
# Library consumers (e.g. `worktrunk-sync`) should depend on worktrunk with
# `default-features = false` to avoid pulling these in.
cli = [
    "dep:clap",
    "dep:clap_complete",
    "dep:crossterm",
    "dep:humantime",
    "dep:skim",
    "dep:termimad",
    "dep:tracing-log",
    "dep:tracing-subscriber",
]
syntax-highlighting = ["dep:tree-sitter", "dep:tree-sitter-bash", "dep:tree-sitter-highlight"]
# Enable shell/PTY integration tests (requires bash, zsh, fish installed on system)
# Includes: shell wrapper tests, PTY-based approval prompts, TUI select, progressive rendering
# These tests can cause nextest to suspend due to terminal foreground pgrp issues.
# When enabled, run with NEXTEST_NO_INPUT_HANDLER=1 to avoid suspension.
# See CLAUDE.md "Nextest Terminal Suspension" section for details.
shell-integration-tests = []
# Install git-wt binary so `git wt` works as a git subcommand
git-wt = []

[lib]
name = "worktrunk"
path = "src/lib.rs"

[[bin]]
name = "wt"
path = "src/main.rs"
required-features = ["cli"]

# Also install as git-wt so `git wt <command>` works as a git subcommand.
# Primarily useful on Windows where `wt` conflicts with Windows Terminal.
# See: https://github.com/max-sixty/worktrunk/issues/133
# Install with: cargo install worktrunk --features git-wt
[[bin]]
name = "git-wt"
path = "src/git_wt.rs"
required-features = ["cli", "git-wt"]
# `git_wt.rs` is `include!("main.rs")`, so its unit tests are byte-identical
# duplicates of the `wt` binary's. Running them adds no coverage and breaks
# under `cargo hack test --feature-powerset`: insta derives snapshot filenames
# from the crate name, so the duplicates look for `git_wt__*.snap` files that
# don't exist (only `wt__*`). The `check` powerset still compiles this target.
test = false

# The integration suite execs the `wt` binary (needs `cli`) and snapshots its
# rendered output, which bakes in syntax highlighting (needs
# `syntax-highlighting`). Declaring both lets `cargo hack test
# --feature-powerset` skip this target on combinations that can't satisfy it
# rather than fail; lib and doc tests still run on every combination.
[[test]]
name = "integration"
path = "tests/integration.rs"
required-features = ["cli", "syntax-highlighting"]

[dependencies]
anyhow = "1.0"
anstream = "1.0"
anstyle = "1.0"
ansi-str = "0.9"
color-print = "0.3.7"
askama = { version = "0.16", default-features = false, features = ["derive", "std"] }
chrono = "0.4"
clap = { version = "4.6", features = ["derive", "unstable-ext", "wrap_help"], optional = true }
clap_complete = { version = "4.6", features = ["unstable-dynamic"], optional = true }
crossbeam-channel = "0.5"
crossterm = { version = "0.29", optional = true }
indexmap = { version = "2.14", features = ["serde"] }
etcetera = "0.11"
# `log` is still used pervasively for application logging; events flow into
# `tracing` via `tracing-log::LogTracer` (CLI binary only).
log = "0.4"
# 0.1.30 added the `enabled!` macro `src/trace/emit.rs::Span::drop` uses to
# elide span emission when the subscriber doesn't care. Older versions only
# expose the per-level macros and dispatcher checks.
tracing = "0.1.30"
# Compatibility shim: forward `log::*` macros into `tracing`. ~100 call sites
# across the codebase keep using `log::debug!` etc.; only the routing layer
# moved.
tracing-log = { version = "0.2.0", optional = true }
# Layered subscribers do the routing today's `Route` enum used to. `env-filter`
# replaces env_logger's RUST_LOG parsing; `fmt` provides the writer + format
# scaffolding; `registry` composes layers. Pinned to ≥ 0.3.17: that's when
# `EnvFilter::builder().with_default_directive(...).from_env_lossy()` (used in
# `src/logging.rs`) stabilized on top of the per-layer filtering rework.
tracing-subscriber = { version = "0.3.17", default-features = false, features = ["ansi", "env-filter", "fmt", "registry"], optional = true }
# Only enable needed features - saves ~200KB by excluding debug, macros, multi_template
minijinja = { version = "2.20", default-features = false, features = ["builtins", "serde", "std_collections"] }
rayon = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shell-escape = "0.1"
shellexpand = "3.1"
strsim = "0.11"
strum = { version = "0.28", features = ["derive"] }
synoptic = "2"
terminal_size = "0.4"
toml = { version = "1.0", features = ["preserve_order"] }
toml_edit = { version = "0.25", features = ["serde"] }
# tree-sitter and tree-sitter-highlight should use matching versions.
# tree-sitter-bash may lag behind (0.25.x works with tree-sitter 0.26.x).
# These are optional dependencies controlled by the "syntax-highlighting" feature.
# To build without C compilation requirements, use: cargo install worktrunk --no-default-features --features cli
tree-sitter = { version = "0.26", optional = true }
tree-sitter-bash = { version = "0.25.1", optional = true }
tree-sitter-highlight = { version = "0.26", optional = true }
unicode-width = "0.2"
wrap-ansi = "0.1"
osc8 = "0.1.0"
supports-hyperlinks = "3"
home = "0.5.12"
humantime = { version = "2.2", optional = true }
once_cell = "1.21"
dirs = "6.0"
normalize-path = "0.2.1"
path-slash = "0.2"
pathdiff = "0.2"
which = "8.0"
# Cross-platform path canonicalization that avoids Windows verbatim paths (\\?\)
# which external tools like git cannot handle. On Unix, it's a no-op wrapper.
dunce = "1.0"
termimad = { version = "0.34.1", optional = true }
urlencoding = "2.1"
regex = "1.12"
ignore = "0.4"
reflink-copy = "0.1"
# Atomic, no-overwrite rename (renameat2 / renamex_np / MoveFileExW) for
# `--clobber` backups — closes the check-then-rename TOCTOU. Keeps the FFI
# (and its `unsafe`) out of this crate, which is `unsafe_code = "forbid"`.
renamore = "0.3"
dashmap = "6.2.1"
fs2 = "0.4.3"
sanitize-filename = "0.6.0"
schemars = { version = "1.2.1", features = ["derive"] }
# SHA-256 is used for persistent cache keys (e.g., summary diff hashes in
# `.git/wt/cache/summary/`). stdlib's `DefaultHasher` is not guaranteed
# stable across Rust versions, so we need a deterministic algorithm on disk.
sha2 = "0.11"
# Wordlists for the `codename` template filter. PINNED EXACT — bumping this
# can silently shift every existing user's codename-derived worktree path,
# orphaning their on-disk worktrees. Coordinate any version change as a
# breaking-change rollout (see `test_codename_outputs_are_stable` and
# `src/config/expansion.rs::codename`). We use only the static wordlists,
# not the random-name generator, so `default-rng` and `clap` stay off.
petname = { version = "=3.0.0", default-features = false, features = ["default-words"] }

tempfile = "3.27"
wait-timeout = "0.2"

[target.'cfg(unix)'.dependencies]
# Pinned to the 0.20.x line. Newer skim releases (the 3.x / 4.x rewrite)
# pin many of their direct dependencies with exact versions — e.g.,
# `color-eyre = "=0.6.5"`, `derive_builder = "=0.20.2"`, `kanal = "=0.1.1"`,
# `tokio-util = "=0.7.18"`, `unicode-normalization = "=0.1.25"`, and ~12
# others. Depending on skim would lock worktrunk onto each of those exact
# versions, so an upgrade blocks on upstream relaxing those pins.
# Windows picker support (worktrunk#2223) landed in skim v4.3.0 but is
# gated by the same constraint.
skim = { version = "0.20", optional = true }
nix = { version = "0.31", default-features = false, features = ["process", "signal"] }
signal-hook = "0.4"

[build-dependencies]
vergen-gitcl = { version = "10.0.0", features = ["build"] }

[dev-dependencies]
insta = { version = "1.47.2", features = ["yaml", "redactions", "filters"] }
insta-cmd = "0.7"
rstest = "0.26"
tempfile = "3.27"
toml = "1.0"
criterion = "0.8"
portable-pty = "0.9"
regex = "1.12"
vt100 = "0.16"
ansi-to-html = "0.2.3"
wt-perf = { path = "tests/helpers/wt-perf" }
similar = "3.1.1"

[[bench]]
name = "alias"
harness = false

[[bench]]
name = "completion"
harness = false

[[bench]]
name = "list"
harness = false

[[bench]]
name = "cow_copy"
harness = false

[[bench]]
name = "time_to_first_output"
harness = false

[[bench]]
name = "remove"
harness = false

[[bench]]
name = "picker_preview"
harness = false

[lints.rust]
unsafe_code = "forbid"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[patch.crates-io]
# Local fork of skim-tuikit 0.6.6 carrying four small fixes. Run
# `task vendor-diff` to see the full diff against the upstream tarball.
#
# Upstream status: skim-tuikit is effectively abandoned. Upstream skim
# migrated to ratatui in skim-rs/skim#864 (merged 2026-01-12) and has
# shipped several releases on the new backend; crates.io skim-tuikit is
# frozen at 0.6.6 (Aug 2025) and will not receive another release. The
# bugs below are resolved (or moot) in ratatui-era skim but not in the
# vendored tuikit. These patches are permanent until we either migrate
# our picker to a post-ratatui skim (breaking API change in
# `src/commands/picker/`) or drop skim entirely.
#
# 1. Dropped-bytes bug in `Output::flush` — it used `write()` instead of
#    `write_all()`, so when the kernel accepted a partial write (common
#    under load or in tmux PTYs with small pipe buffers) the remainder of
#    the buffer was dropped by the subsequent `buffer.clear()`, leaving
#    the picker's first render missing whichever rows didn't fit in the
#    first chunk. See vendor/skim-tuikit/src/output.rs.
#
# 2. Asymmetric alternate-screen enter/exit in partial-height mode — in
#    full-height mode tuikit emits smcup on enter and rmcup on exit, but
#    in partial-height mode (e.g. `height("90%")`) it skips smcup yet
#    still emits rmcup on shutdown, leaving terminal artifacts. Fixed by
#    tracking whether smcup was actually emitted and gating rmcup on that
#    flag. See vendor/skim-tuikit/src/term.rs. Upstream bug was
#    skim-rs/skim#880, resolved via the ratatui migration rather than a
#    tuikit patch.
#
# 3. `usize` underflow panic in `Term::on_resize` — when the terminal is
#    smaller than the picker's preferred height, `screen_height - height`
#    underflowed and panicked with "attempt to subtract with overflow".
#    Reachable by running `wt switch` under `script(1)` with stdin closed,
#    or in any sufficiently small tmux pane. Fixed with `saturating_sub`,
#    which clamps `cursor_row` to 0 — matching the full-screen fallback
#    `ensure_height` already uses. See vendor/skim-tuikit/src/term.rs. No
#    known upstream tracking issue; moot post-ratatui.
#
# 4. `from_keyname` did not parse `alt-<digit>` tokens — it had `alt-a`..
#    `alt-z` but no `alt-0`..`alt-9`, so a keymap like `alt-1:...` silently
#    failed to bind (Input::bind early-returns on an unparseable key). The
#    input reader already decodes ESC-<digit> to `Alt(ch)`, so this was a
#    pure config-parser gap. The picker binds alt-1..alt-5 to jump directly
#    to preview tabs (bare digits are reserved for the query). Added the ten
#    missing arms, matching fzf's alt-1..alt-9. See
#    vendor/skim-tuikit/src/key.rs. Clean upstream PR candidate.
skim-tuikit = { path = "vendor/skim-tuikit" }
