# HOW THE BINARY GETS BUILT:
# Has a dummy integration test (tests/builds.rs) that triggers binary compilation
# when running `cargo test`. Combined with `workspace.default-members` including
# this package, `cargo test` automatically builds the binary.
[package]
name = "wt-perf"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
publish = false
description = "Performance testing and tracing tools for worktrunk"

[dependencies]
# For repo setup
tempfile = "3.27"
dunce = "1"

# For CLI
clap = { version = "4", features = ["derive"] }

# For JSON output
serde_json = "1"

# For trace parsing (reuse worktrunk's trace module).
# `default-features = false` avoids leaking the `cli` feature into the
# workspace-unified resolution of worktrunk; without it, `cargo check
# --no-default-features` on the worktrunk lib silently inherits `cli`,
# masking gating bugs in lib code that uses `cli`-gated dependencies.
worktrunk = { path = "../../..", default-features = false }

[lib]
name = "wt_perf"
path = "src/lib.rs"

[[bin]]
name = "wt-perf"
path = "src/main.rs"
